# cppcub3r

./: .gitmodules  CMakeLists.txt  Makefile
docker/: Dockerfile  build_docker.sh  opencv.patch
src/: CMakeLists.txt  detection.cpp  detection.hpp  main.cpp  motors.cpp  motors.hpp  picture.cpp  solver.cpp  solver.hpp
